Bug 95937 - Closing Find Article dialog via kicker does not update articles view
Summary: Closing Find Article dialog via kicker does not update articles view
Status: RESOLVED FIXED
Alias: None
Product: knode
Classification: Miscellaneous
Component: general (show other bugs)
Version: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-12-28 19:21 UTC by Davide Ferrari
Modified: 2004-12-29 19:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Davide Ferrari 2004-12-28 19:21:36 UTC
Version:            (using KDE KDE 3.3.2)
Installed from:    Gentoo Packages

As subject, if I close the find article dialog (bringed up with F4) via kicker (RMB click, close this window), the article list is not updated and you have to reopen the dialog and close it using the close button in it.
Comment 1 Volker Krause 2004-12-29 19:33:01 UTC
CVS commit by vkrause: 

Fix #95937 (search filter not reset after closing search dialog).

BUG: 95937


  M +5 -0      knsearchdialog.cpp   1.20
  M +2 -0      knsearchdialog.h   1.10


--- kdepim/knode/knsearchdialog.cpp  #1.19:1.20
@@ -112,4 +112,9 @@ void KNSearchDialog::slotCloseClicked()
 
 
+void KNSearchDialog::closeEvent( QCloseEvent * )
+{
+  emit dialogDone();
+}
+
 //--------------------------------
 

--- kdepim/knode/knsearchdialog.h  #1.9:1.10
@@ -38,4 +38,6 @@ class KNSearchDialog : public QDialog {
 
   protected:
+    void closeEvent( QCloseEvent* e );
+
     KNFilterConfigWidget *fcw;
     QPushButton *startBtn, *newBtn,  *closeBtn;