Fix #95937 (search filter not reset after closing search dialog).

BUG: 95937

svn path=/trunk/kdepim/; revision=374058